ftpsvc/tftp-hpa/tftp-hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: tftpd
  namespace: rack01
  labels:
    app.name: tftpd
spec:
  type: ClusterIP
  #loadBalancerIP: 10.0.0.23
  ports:
    - port: 69
      targetPort: 69
      protocol: UDP
      name: tftpd
  selector:
    app: tftpd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tftpd
  namespace: rack01
  labels:
    app.name: tftpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: tftpd
  template:
    metadata:
      labels:
        app.name: tftpd
    spec:
      containers:
        - name: tftpd
          image: strusfr/docker-ubuntu-tftpd
          imagePullPolicy: Always
          ports:
            - name: tftpd
              containerPort: 69
              protocol: UDP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: tftp-nfs
              mountPath: /srv/tftp
              subPath: tftp
              readOnly: false
      volumes:
        - name: tftp-nfs
          persistentVolumeClaim:
            claimName: tftp-nfs
