ftpsvc/tftp-hpa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: tftpd
    k8s-app: tftpd
  name: tftpd
  namespace: rack01
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    #certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
    cert-manager.io/cluster-issuer: "selfsigned-cert"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - tftpd.home.lab
  rules:
  - host: tftpd.home.lab
    http:
      paths:
      - backend:
          serviceName: tftpd
          servicePort: 69
